IAM-10686  Fix text wrapping of sidebar menu items

--- a/packages/platform-shared/src/scss/example-theme.scss
+++ b/packages/platform-shared/src/scss/example-theme.scss
@@ -332,7 +332,7 @@ $fr-sidemenu-hover:  rgba(0, 0, 0, 0.13);
 $fr-sidemenu-active-bg: rgba(0, 0, 0, 0.13);
 $fr-sidemenu-shadow: 1px 0 9px rgba(0, 0, 0, 0.13);
 $fr-sidemenu-border: none;
-$fr-sidemenu-width-lg: 15em;
+$fr-sidemenu-width-lg: 16rem;
 $fr-sidemenu-width-sm: 4rem;
 $fr-sidemenu-color: $gray-200;
 $fr-sidemenu-font-color: $gray-200;
